fix general page doesn't load issue

--- a/public/views/course/course-edit/templates/general.view.client.html
+++ b/public/views/course/course-edit/templates/general.view.client.html
@@ -46,7 +46,7 @@
             <label for="name">Course Name</label>
             <input id="name"
                    class="form-control"
-                   ng-model="course.name"
+                   ng-model="model.course.courseName"
                    value="Course Name"
                    type="text"
                    placeholder="course name"/>
@@ -56,7 +56,7 @@
             </label>
             <textarea id="description"
                       rows="8"
-                      ng-model="course.description"
+                      ng-model="model.course.courseDescription"
                       class="form-control">
             </textarea>
 
