change data in the service

--- a/public/views/course/course-edit/templates/course-new.view.client.html
+++ b/public/views/course/course-edit/templates/course-new.view.client.html
@@ -1,66 +1,30 @@
 
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-5 col-xs-2">
-                <a class="navbar-brand" href="#">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="hidden-sm hidden-xs">Course Editing</span>
-                </a>
-            </div>
-            <div class="col-md-6 col-xs-8 navbar-brand">
-                Edit Course content
-            </div>
-            <div class="col-md-1 col-xs-1 nav-bar-plus">
-                <a href="website-list.html">
-                    <span class="glyphicon glyphicon-ok pull-right span-plus" aria-hidden="true"></span>
-
-                </a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div ng-include="'views/course/course-edit/templates/course.navbar.component.client.html'">
+</div>
 
 <div class="container-fluid">
     <div class="row">
         <div class="col-md-4 hidden-sm hidden-xs website-new-column website-new-border">
-            <ul class="list-group">
-                <li class="list-group-item boarder-none"
-                    ng-repeat="list in model.lists">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#/instructor/{{model.instructorId}}/course/{{model.courseId}}/general">
-                                {{list}}
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#/general">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
+            <div ng-include="'views/course/course-edit/templates/course.component.client.html'">
+            </div>
         </div>
 
-        <div class="col-md-8 website-new-column">
+        <div class="col-md-8">
             <label for="name">Course Name</label>
             <input id="name"
                    class="form-control"
                    value="Course Name"
-                   ng-model="course.name"
+                   ng-model="course.courseName"
                    type="text"
                    placeholder="course name"/>
 
-            <label for="courseId">course Id</label>
-            <input id="courseId"
+            <label for="courseNumber">Course number</label>
+            <input id="courseNumber"
                    class="form-control"
-                   value="courseId"
-                   ng-model="course.Id"
+                   value="courseNumber"
+                   ng-model="course.courseNumber"
                    type="text"
-                   placeholder="course Id"/>
-
+                   placeholder="course number"/>
 
             <label for="description">
                 Course Description
@@ -71,16 +35,11 @@
                       class="form-control">
             </textarea>
 
-           <hr>
-
             <a class="btn btn-block btn-success"
                ng-click="model.createNewCourse(course)">create new course</a>
 
             <a class="btn btn-block btn-danger"
-               href="#/instructor/123/course/course-landing">Cancel</a>
-
-
-
+               href="#/instructor/{{model.instructorId}}/course/course-landing">Cancel</a>
         </div>
     </div>
 </div>
