--- a/public/views/course/course-edit/templates/requirements-list.view.client.html
+++ b/public/views/course/course-edit/templates/requirements-list.view.client.html
@@ -1,56 +1,20 @@
-
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-5 col-xs-2">
-                <a class="navbar-brand" href="#">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="hidden-sm hidden-xs">CS9999</span>
-                </a>
-            </div>
-            <div class="col-md-6 col-xs-8 navbar-brand">
-                Edit Course content
-            </div>
-            <div class="col-md-1 col-xs-1 nav-bar-plus">
-                <a href="website-list.html">
-                    <span class="glyphicon glyphicon-ok pull-right span-plus" aria-hidden="true"></span>
-
-                </a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div ng-include="'views/course/course-edit/templates/course.navbar.component.client.html'">
+</div>
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 hidden-sm hidden-xs website-new-column website-new-border">
-            <ul class="list-group">
-                <li class="list-group-item boarder-none"
-                    ng-repeat="list in model.lists">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#/instructor/:instructorId/course/:courseId/general">
-                                {{list}}
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#!/general">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-
-            </ul>
+        <div class="col-md-4 hidden-sm hidden-xs">
+            <div ng-include="'views/course/course-edit/templates/course.component.client.html'">
+            </div>
         </div>
-
 
         <div class="col-md-8 ">
             <label for="Requirements">
                Requirements
             </label>
             <ul class="list-group">
-                <li class="list-group-item no-border" ng-repeat="requirement in model.course.requirements">
+                <li class="list-group-item no-border"
+                    ng-repeat="requirement in model.course.requirements">
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
@@ -59,18 +23,40 @@
                                    type="text">
                             </input>
                         </div>
+
                         <div class="col-xs-1">
                             <span class="glyphicon glyphicon-remove  pull-right btn btn-danger"
-                                  aria-hidden="true" ng-click="model.deleteRequirement()">
+                                  aria-hidden="true"
+                                  ng-click="model.deleteRequirement()">
                             </span>
                         </div>
                         <div class="col-xs-1">
                             <span class="glyphicon glyphicon-ok pull-right btn btn-success"
-                                  aria-hidden="true">
+                                  aria-hidden="true"
+                                  ng-click="model.updateRequirement()">
                             </span>
                         </div>
                     </div>
                 </li>
+
+                <li class="list-group-item no-border">
+                    <div class="row">
+                        <div class="col-xs-10">
+                            <input class="form-control"
+                                   type="text"
+                                   ng-model="course.newRequirement"
+                                   placeholder="Please add new course requirement">
+                            </input>
+                        </div>
+                        <div class="col-xs-1">
+                            <span class="glyphicon glyphicon-plus center-block btn btn-primary"
+                                  aria-hidden="true"
+                                  ng-click="model.addRequirement()">
+                            </span>
+                        </div>
+                    </div>
+                </li>
+
             </ul>
         </div>
 
@@ -78,7 +64,6 @@
 
         </div>
     </div>
-
 
 
 
