--- a/public/views/course/course-edit/templates/requirements-new.view.client.html
+++ b/public/views/course/course-edit/templates/requirements-new.view.client.html
@@ -1,119 +1,13 @@
 
-<body>
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-md-5 col-xs-2">
-                <a class="navbar-brand" href="#">
-                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                    <span class="hidden-sm hidden-xs">CS9999</span>
-                </a>
-            </div>
-            <div class="col-md-6 col-xs-8 navbar-brand">
-                Edit Course content
-            </div>
-            <div class="col-md-1 col-xs-1 nav-bar-plus">
-                <a href="website-list.html">
-                    <span class="glyphicon glyphicon-ok pull-right span-plus" aria-hidden="true"></span>
-
-                </a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div ng-include="'views/course/course-edit/templates/course.navbar.component.client.html'">
+</div>
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-4 hidden-sm hidden-xs website-new-column website-new-border">
-            <ul class="list-group">
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="general.html">
-                                General
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="general.html">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="learningaims.html">
-                                Learning Aims
-                            </a>
-                        </div>
-
-                        <div class="col-xs-1">
-                            <a href="learningaims.html">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="requirements.html">
-                                Requirement
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="requirements.html">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Curriculum
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Instructor
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-                <li class="list-group-item boarder-none">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <a href="#">
-                                Reviews
-                            </a>
-                        </div>
-                        <div class="col-xs-1">
-                            <a href="#">
-                                <span class="glyphicon glyphicon-cog pull-right"></span>
-                            </a>
-                        </div>
-                    </div>
-                </li>
-            </ul>
+        <div class="col-md-4 hidden-sm hidden-xs">
+            <div ng-include="'views/course/course-edit/templates/course.component.client.html'">
+            </div>
         </div>
-
 
         <div class="col-md-8 ">
             <label for="Requirements">
@@ -124,86 +18,18 @@
                     <div class="row">
                         <div class="col-xs-10">
                             <input class="form-control"
-                                   value="" type="class">
+                                   type="text"
+                                   ng-model="course.newRequirement"
+                                   placeholder="Please add new course requirement">
                             </input>
                         </div>
                         <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-remove  pull-right btn btn-danger"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-ok pull-right btn btn-success"
-                                  aria-hidden="true">
+                            <span class="glyphicon glyphicon-plus center-block btn btn-primary"
+                                  aria-hidden="true"
+                                  ng-click="model.addRequirement()">
                             </span>
                         </div>
                     </div>
-
-
-                </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                   value="" type="class">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-remove  pull-right btn btn-danger"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-ok pull-right btn btn-success"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                    </div>
-
-
-                </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                   value="" type="class">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-remove  pull-right btn btn-danger"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-ok pull-right btn btn-success"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                    </div>
-
-
-                </li>
-                <li class="list-group-item no-border">
-                    <div class="row">
-                        <div class="col-xs-10">
-                            <input class="form-control"
-                                   value=""
-                                   type="class">
-                            </input>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-remove  pull-right btn btn-danger"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                        <div class="col-xs-1">
-                            <span class="glyphicon glyphicon-ok pull-right btn btn-success"
-                                  aria-hidden="true">
-                            </span>
-                        </div>
-                    </div>
-
-
                 </li>
 
             </ul>
@@ -213,10 +39,3 @@
 
     </div>
 </div>
-
-
-
-
-
-
-
