--- a/public/views/course/course-edit/templates/general.view.client.html
+++ b/public/views/course/course-edit/templates/general.view.client.html
@@ -27,18 +27,10 @@
                       ng-model="model.course.courseDescription"
                       class="form-control">
             </textarea>
-
-
-
-
-
             <a class="btn btn-block btn-success"
-               ng-click="model.updateCourse()">update</a>
-
+               ng-click="model.updateCourse(model.course)">update</a>
             <a class="btn btn-block btn-danger"
                ng-click="model.deleteCourse()">delete</a>
-
-
         </div>
     </div>
 </div>
