--- a/public/views/course/course-edit/template/curriculum.instructor.view.client.html
+++ b/public/views/course/course-edit/template/curriculum.instructor.view.client.html
@@ -49,33 +49,33 @@
             </div>
             <label for="chapter">Chapter </label>
             <input id="chapter"
-                   ng-model="curriculum.chapter"
+                   ng-model="model.curriculum.chapter"
                    class="form-control"
                    placeholder="Chapter 1"/>
             <label for="description">Description </label>
             <textarea id="description"
                       class="form-control"
-                      ng-model="curriculum.description"
+                      ng-model="model.curriculum.description"
                       placeholder="Description"
                       rows="6">Description</textarea>
             <a class="btn btn-block btn-success"
-                ng-click="model.addCurriculumItem(curriculum)">Add</a>
+                ng-click="model.addCurriculumItem(model.curriculum)">Add</a>
             <hr/>
 
             <ul class="list-group">
                 <li ng-repeat="chapter in model.chapters"
                     class="list-group-item">
                     <div class="row">
-                        <div class="col-xs-11">
+                        <div class="col-xs-10">
                             <h4>{{chapter.chapter}}</h4>
                             <div>{{chapter.description}}</div>
                         </div>
-                        <!--<div class="col-xs-1">-->
-                            <!--<a class="btn btn-block btn-default"-->
-                               <!--ng-click="model.updateCurriculumItem(chapter._id, curriculum)">-->
-                                <!--<span class="glyphicon glyphicon-pencil"></span>-->
-                            <!--</a>-->
-                        <!--</div>-->
+                        <div class="col-xs-1">
+                            <a class="btn btn-block btn-default"
+                               ng-click="model.updateCurriculumItem(chapter._id)">
+                                <span class="glyphicon glyphicon-pencil"></span>
+                            </a>
+                        </div>
                         <div class="col-xs-1">
                             <a class="btn btn-block btn-danger"
                                ng-click="model.deleteCurriculumItem(chapter._id)">
