--- a/public/views/course/template/course_all.view.html
+++ b/public/views/course/template/course_all.view.html
@@ -41,6 +41,12 @@
                 </div>
             </div>
 
+            <div class="col-sm-1 hidden-xs">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#/home">Logout</a>
+                </div>
+            </div>
+
         </div>
     </nav>
 </div>
