--- a/public/views/course/template/course_add.view.html
+++ b/public/views/course/template/course_add.view.html
@@ -42,6 +42,18 @@
                 </div>
             </div>
 
+            <div class="col-sm-1 hidden-xs">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#/course">Courses</a>
+                </div>
+            </div>
+
+            <div class="col-sm-1 hidden-xs">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#/home">Logout</a>
+                </div>
+            </div>
+
         </div>
     </nav>
 </div>
@@ -85,7 +97,7 @@
                ng-click="model.createNewCourse(course)">Create</a>
 
             <a class="btn btn-block btn-danger"
-               href="#/instructor/{{model.instructorId}}/course/course-landing">Cancel</a>
+               href="#/course">Cancel</a>
         </div>
     </div>
 </div>
